<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="hello">Thanks for downloading Linear Simple Clock</string>
    <string name="signature">PdroidAndroid</string>
    <string name="configure_label">Linear Simple Clock Widget Configuration</string>
    <string name="app_name">Linear Simple Clock</string>
    <string name="hourformat">Use 24h format</string>
    <string name="shadow">Display shadows</string>
    <string name="save">Creat widget</string>
    <string name="label_4x2">Linear Simple Clock 4x2</string>
    <string name="label_4x1">Linear Simple Clock 4x1</string>
    </resources>